[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/startScreen3.gd" type="Script" id=2]
[ext_resource path="res://scene/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/parallax/5 - Sky_color.png" type="Texture" id=4]
[ext_resource path="res://assets/parallax/2 - Hills.png" type="Texture" id=5]
[ext_resource path="res://assets/parallax/4 - Cloud_cover_2.png" type="Texture" id=6]
[ext_resource path="res://assets/parallax/1 - Foreground_scenery.png" type="Texture" id=7]
[ext_resource path="res://scene/PlayerMenu.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bg" type="Node2D" parent="."]

[node name="sky" type="Sprite" parent="bg"]
position = Vector2( 159, 95 )
scale = Vector2( 1.09722, 0.903846 )
texture = ExtResource( 4 )

[node name="cloud" type="Sprite" parent="bg"]
position = Vector2( 159, 95 )
scale = Vector2( 1.09722, 0.903846 )
texture = ExtResource( 6 )

[node name="hill" type="Sprite" parent="bg"]
position = Vector2( 159, 95 )
scale = Vector2( 1.09722, 0.903846 )
texture = ExtResource( 5 )

[node name="trees" type="Sprite" parent="bg"]
position = Vector2( 159, 95 )
scale = Vector2( 1.09722, 0.903846 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.678431 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 0, 15, 0, 19, 13, 0, 65536, 15, 0, 65555, 13, 0, 131072, 15, 0, 131091, 13, 0, 196608, 15, 0, 196627, 13, 0, 262144, 15, 0, 262163, 13, 0, 327680, 15, 0, 327699, 13, 0, 393216, 15, 0, 393235, 13, 0, 458752, 15, 0, 458754, 10, 0, 458755, 11, 0, 458756, 12, 0, 458771, 13, 0, 524288, 15, 0, 524290, 13, 0, 524291, 14, 0, 524292, 15, 0, 524307, 13, 0, 589824, 15, 0, 589826, 13, 0, 589827, 14, 0, 589828, 15, 0, 589843, 13, 0, 655360, 15, 0, 655362, 13, 0, 655363, 14, 0, 655364, 15, 0, 655379, 13, 0, 720896, 15, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 13, 0 )

[node name="PlayerMenu" parent="." instance=ExtResource( 8 )]
position = Vector2( 58, 96 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -23.5
margin_right = 52.0
margin_bottom = 23.5

[node name="startBtn" type="Button" parent="controls"]
margin_right = 104.0
margin_bottom = 9.0
focus_neighbour_top = NodePath("../quitBtn")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.85098, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 1, 0.541176, 0.00392157, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 6 )
text = "Start"

[node name="controlsBtn" type="Button" parent="controls"]
margin_top = 13.0
margin_right = 104.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.85098, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 1, 0.541176, 0.00392157, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 6 )
text = "Controls"

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 26.0
margin_right = 104.0
margin_bottom = 35.0
focus_neighbour_bottom = NodePath("../startBtn")
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.85098, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 1, 0.541176, 0.00392157, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 6 )
text = "Quit"

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/controlsBtn" to="." method="_on_controlsBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
